--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node --files src/app.ts",
-    "migrate": "drizzle-kit generate:mysql",
-    "apply": "ts-node --files src/db/migrator.ts",
+    "build": "rm -rf dist && tsc",
+    "db:migrate": "drizzle-kit generate:mysql",
+    "db:push": "drizzle-kit push:mysql",
+    "db:deploy": "ts-node --files .drizzle/migrator.ts",
     "try": "ts-node --files src/try.ts"
   },
   "keywords": [],
@@ -15,12 +17,13 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.1",
     "@paralleldrive/cuid2": "^2.2.0",
-    "drizzle-orm": "^0.25.4",
+    "dotenv": "^16.0.3",
+    "drizzle-orm": "0.26.1-c8de0ba",
     "mysql2": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
-    "drizzle-kit": "^0.17.6",
+    "drizzle-kit": "^0.18.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
